--- a/index.html
+++ b/index.html
@@ -257,14 +257,14 @@
                     <div class="person">
                         <div class="vertical-connector connector"></div>
                         <div class="person-card">
-                            <div class="person-name"> زينب</div>
+                            <div class="person-name">   زينب الغول</div>
                             <div class="person-dates">( - )</div>
                         </div>
                     </div>
                     <div class="person">
                         <div class="vertical-connector connector"></div>
                         <div class="person-card">
-                            <div class="person-name">حامود الغول </div>
+                            <div class="person-name">احمد الغول </div>
                             <div class="person-dates">( - )</div>
                         </div>
                     </div>
