--- a/index.html
+++ b/index.html
@@ -297,7 +297,7 @@
                         <div class="vertical-connector connector"></div>
                         <div class="person-card">
                             <div class="person-name">محمد امين الغول</div>
-                            <div class="person-dates">( bac )</div>
+                            <div class="person-dates">(  )</div>
                         </div>
                     </div>
                     <div class="person">
